# APAI_project_work

./: .gitignore  README.md  README_short.md  cuda-profiler.sh  openmp-profiler.sh  profiler.py
CUDA/: CMakeLists.txt
CUDA/include/: hpc.h
CUDA/src/: main.cu
OpenMP/: CMakeLists.txt
OpenMP/include/: utilities.h
OpenMP/src/: main.c  utilities.c
openMP/: CMakeLists.txt  openMP
openMP/include/: network.h  utilities.h
openMP/src/: main.c  network.c  utilities.c
profiling_results/: cuda_profiling_results_raw.csv  generate_graphs.ipynb  profiling_N_scaling_omp.csv  profiling_hard_scaling_omp.csv  profiling_soft_scaling_omp.csv
